--- a/index.html
+++ b/index.html
@@ -286,8 +286,11 @@
                     <div class="logo-box" style="display: flex;">
                         <figure class="logo"><a href="#"><img src="assets/images/Logo ung dung (transparent) - Copy.png"
                                     alt="Sâm Ngọc Linh Ngâm Mật Ong" class="logo-mobile"></a></figure>
-                        <div class="header-order-btn ml-30">
-                            <a href="#order" class="order-now-btn elegant-shake">ĐẶT HÀNG</a>
+                        <div class="header-order-btn ml-30"
+                            style="display: inline-block !important; white-space: nowrap !important;">
+                            <a href="#order" class="order-now-btn elegant-shake"
+                                style="white-space: nowrap !important; display: inline-block !important; padding: 10px 15px !important;">ĐẶT
+                                HÀNG</a>
                         </div>
 
                     </div>
